changes made on index

--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -11,11 +11,12 @@
     <div class="container">
         <div class="sub2">
             <form name="form4" action="/ind" method="POST">
-            <center><h1>VOTING APP</h1></center>
-
+           <div> <center><h1>VOTING APP</h1></center> </div>
+<div class="b1">
+  <center>
             <a class="btn btn-primary" href="/adminlogin">ADMIN</a>
             <a class="btn btn-primary" href="/login">VOTER</a>
-
+          </center>  </div>
            </form>
             
 
