change on index

--- a/Views/alogin.ejs
+++ b/Views/alogin.ejs
@@ -7,6 +7,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="sub1">
+            <img id="img" src=https://st.depositphotos.com/1002881/1285/i/600/depositphotos_12859789-stock-photo-admin-tag.jpg>
+        </div>
         <div class="sub2">
             <center><h1>ADMIN LOGIN</h1></center>
             <form name="form1" action="/advali" onsubmit="return requ()" method="POST">
