--- a/Views/vlogin.ejs
+++ b/Views/vlogin.ejs
@@ -7,6 +7,9 @@
 </head>
 <body>
     <div class="container">
+      <div class="sub1">
+        <img id="img" src=https://storage.googleapis.com/fplsblog/online-voting.png>
+    </div>
         <div class="sub2">
             <center><h1>VOTER LOGIN</h1></center>
             <form name="form1" action="/validate" onsubmit="return required()" method="POST">
